--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,10 @@
 <html>
   <head>
+  <title>Jaykar Jagarlapudi</title>
+  <meta name="author" content="Shankar JV">  
+  <meta name="description" content="Jaykar Jagarlapudi">
+  <meta name="viewport" content="width=device-width, initial-scale=0.85">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
     <img src="top10.jpg" />
