--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,10 @@
   <title>Jaykar Jagarlapudi</title>
   <meta name="author" content="Shankar JV">  
   <meta name="description" content="Jaykar Jagarlapudi">
-  <meta name="viewport" content="width=device-width, initial-scale=0.85">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   </head>
   <body>
-    <img src="top10.jpg" />
+    <img src="ssc1st.jpg" />
   </body>
 </html>
